[tool.poetry]
name = "marketbeat-lockup-heatmap"
version = "0.1.0"
description = ""
authors = ["Uros Perisic"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
dash = "^2.1.0"
beautifulsoup4 = "^4.10.0"
pandas = "^1.4.1"
dfply = "^0.3.3"
plotly-calplot = "^0.1.7"
millify = "^0.1.1"
cachetools = "^5.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
